# kamehameha

./: LICENSE  README.md  pyproject.toml  windows_camera_client.py
app/: __init__.py  beam.py  config.py  detector.py  effects.py  game.py  npc.py  server.py
static/: index.html
