[project]
name = "beam-live"
version = "0.1.0"
description = "Realtime webcam pose detection with a flashy beam-style effect streamed from a Windows camera over SSH."
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "mediapipe>=0.10.14,<0.10.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
